--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 						<div class="header-text">
 							<h2> NITHISH JAPALA </h2>
 							<p>Java Full Stack Developer</p>
-							<a href="assets/download/Nithish_Japala_Resume.docx" download>Download Resume</a>
+							<!-- <a href="assets/download/Nithish_Japala_Resume.docx" download>Download Resume</a>-->
 						</div><!--/.header-text-->
 					</div><!--/.col-->
 				</div><!-- /.row-->
@@ -175,7 +175,7 @@
 									<div class="row">
 										<div class="col-md-5">
 											<div class="experience-time text-right">
-												<h2>Jan 2023 – Aug 2024</h2>
+												<h2>May 2023 – Present</h2>
 												<h3>Full Stack Java Developer</h3>
 											</div>
 										</div>
@@ -203,7 +203,7 @@
 									<div class="row">
 										<div class="col-md-5">
 											<div class="experience-time text-right">
-												<h2>Apr 2021 – Dec 2022</h2>
+												<h2>July 2021 – Apr 2023</h2>
 												<h3>Full Stack Java Developer</h3>
 											</div>
 										</div>
@@ -231,7 +231,7 @@
 									<div class="row">
 										<div class="col-md-5">
 											<div class="experience-time text-right">
-												<h2>Jan 2020 – Apr 2021</h2>
+												<h2>Jan 2020 – June 2021</h2>
 												<h3>Software Engineer</h3>
 											</div>
 										</div>
@@ -259,7 +259,7 @@
 									<div class="row">
 										<div class="col-md-5">
 											<div class="experience-time text-right">
-												<h2>Apr 2017 – Dec 2019</h2>
+												<h2>May 2018 – Dec 2019</h2>
 												<h3>Software Engineer</h3>
 											</div>
 										</div>
@@ -287,7 +287,7 @@
 									<div class="row">
 										<div class="col-md-5">
 											<div class="experience-time text-right">
-												<h2>July 2015 – Apr 2017</h2>
+												<h2>May 2016 – Apr 2018</h2>
 												<h3>Associate Software Engineer</h3>
 											</div>
 										</div>
@@ -316,7 +316,6 @@
 		
 		<!--/.experience-->
 		<!--experience end -->
-		
 		
 
 		<!--skills start -->
