--- a/index.html
+++ b/index.html
@@ -353,10 +353,10 @@
 					<div class="skill-box">Jenkins<div class="progress"><div  class="progress-bar" aria-valuenow="100" aria-valuemin="10" aria-valuemax="100" style=""></div></div></div>
 					<div class="skill-box">JIRA<div class="progress"><div  class="progress-bar" aria-valuenow="100" aria-valuemin="10" aria-valuemax="100" style=""></div></div></div>
 					</div><div class="col-md-3">
-					<div class="skill-box">Microservices<div class="progress"><div class="progress-bar" aria-valuenow="100" aria-valuemin="10" aria-valuemax="100" style=""></div></div></div>	
 					<div class="skill-box">Docker<div class="progress"><div  class="progress-bar" aria-valuenow="100" aria-valuemin="10" aria-valuemax="100" style=""></div></div></div>
 					<div class="skill-box">Kubernetes<div class="progress"><div  class="progress-bar" aria-valuenow="100" aria-valuemin="10" aria-valuemax="100" style=""></div></div></div>
 					<div class="skill-box">AWS S3 and EC2<div class="progress"><div  class="progress-bar" aria-valuenow="100" aria-valuemin="10" aria-valuemax="100" style=""></div></div></div>
+					<div class="skill-box">GCP<div class="progress"><div class="progress-bar" aria-valuenow="100" aria-valuemin="10" aria-valuemax="100" style=""></div></div></div>	
 					<div class="skill-box">Microsoft Azure<div class="progress"><div  class="progress-bar" aria-valuenow="100" aria-valuemin="10" aria-valuemax="100" style=""></div></div></div>
 					<div class="skill-box">Karma<div class="progress"><div  class="progress-bar" aria-valuenow="100" aria-valuemin="10" aria-valuemax="100" style=""></div></div></div>
 					<div class="skill-box">Jasmine<div class="progress"><div  class="progress-bar" aria-valuenow="100" aria-valuemin="10" aria-valuemax="100" style=""></div></div></div>
