--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 					<div class="col-md-12 text-center">
 						<div class="header-text">
 							<h2> NITHISH JAPALA </h2>
-							<p>Java Full Stack Developer</p>
+							<p>Full Stack Developer</p>
 							<!-- <a href="assets/download/Nithish_Japala_Resume.docx" download>Download Resume</a>-->
 						</div><!--/.header-text-->
 					</div><!--/.col-->
@@ -176,7 +176,7 @@
 										<div class="col-md-5">
 											<div class="experience-time text-right">
 												<h2>May 2023 – Present</h2>
-												<h3>Full Stack Java Developer</h3>
+												<h3>Senior Full Stack Developer</h3>
 											</div>
 										</div>
 										<div class="col-md-offset-1 col-md-5">
@@ -204,7 +204,7 @@
 										<div class="col-md-5">
 											<div class="experience-time text-right">
 												<h2>July 2021 – Apr 2023</h2>
-												<h3>Full Stack Java Developer</h3>
+												<h3>Full Stack Developer</h3>
 											</div>
 										</div>
 										<div class="col-md-offset-1 col-md-5">
@@ -232,7 +232,7 @@
 										<div class="col-md-5">
 											<div class="experience-time text-right">
 												<h2>Jan 2020 – June 2021</h2>
-												<h3>Software Engineer</h3>
+												<h3>Full Stack Developer</h3>
 											</div>
 										</div>
 										<div class="col-md-offset-1 col-md-5">
@@ -288,7 +288,7 @@
 										<div class="col-md-5">
 											<div class="experience-time text-right">
 												<h2>May 2016 – Apr 2018</h2>
-												<h3>Associate Software Engineer</h3>
+												<h3>Software Engineer Intern</h3>
 											</div>
 										</div>
 										<div class="col-md-offset-1 col-md-5">
@@ -445,7 +445,7 @@
 								<div class="contact-adress">
 									<div class="contact-add-head">
 										<h3>NITHISH JAPALA</h3>
-										<p>Java Full Stack developer</p>
+										<p>Full Stack developer</p>
 									</div>
 									<div class="contact-add-info">
 										<div class="single-contact-add-info">
