--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
 			            <div class="collapse navbar-collapse menu-ui-design" id="navbar-menu">
 			                <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
 			                <li class=" smooth-menu active"></li>
-			                    <li class=" smooth-menu"><a href="#education">education</a></li>
-			                    <li class="smooth-menu"><a href="#skills">skills</a></li>
-			                    <li class="smooth-menu"><a href="#experience">experience</a></li>
-			                    <li class="smooth-menu"><a href="#contact">contact</a></li>
+			                    <li class=" smooth-menu"><a href="#education">Education</a></li>
+			                    <li class="smooth-menu"><a href="#skills">Skills</a></li>
+			                    <li class="smooth-menu"><a href="#experience">Experience</a></li>
+			                    <li class="smooth-menu"><a href="#contact">Contact</a></li>
 			                </ul><!--/.nav -->
 			            </div><!-- /.navbar-collapse -->
 			        </div><!--/.container-->
@@ -378,8 +378,8 @@
 						<div class="col-sm-6">
 							<div class="single-horizontal-timeline">
 								<div class="experience-time">
-									<h2>JAN 2022 - DEC 2024</h2>
-									<h3>Master <span>of </span> Computer Sciece</h3>
+									<h2>JAN 2023 - DEC 2024</h2>
+									<h3>Master <span>of </span> Computer Science</h3>
 								</div><!--/.experience-time-->
 								<div class="timeline-horizontal-border">
 									<i class="fa fa-circle" aria-hidden="true"></i>
@@ -402,7 +402,7 @@
 							<div class="single-horizontal-timeline">
 								<div class="experience-time">
 									<h2>2014 - 2017</h2>
-									<h3>bachelor <span>of </span> computer science</h3>
+									<h3>Bachelor <span>of </span> Computer Science</h3>
 								</div><!--/.experience-time-->
 								<div class="timeline-horizontal-border">
 									<i class="fa fa-circle" aria-hidden="true"></i>
@@ -413,7 +413,7 @@
 										<h4 class="title">
 											JNTU
 										</h4>
-										<h5>Telangana, HYderabad</h5>
+										<h5>Telangana, Hyderabad</h5>
 										<!--<p class="description">
 											Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
 										</p>-->
