--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 						<div class="col-sm-6">
 							<div class="single-about-txt">
 								<h3>
-									I am a Senior Java Developer with over 8 years of experience in building scalable, high-performance software solutions using Core Java, Spring, and Spring Boot. I excel at creating microservices and RESTful APIs while ensuring efficiency and security. Skilled in Angular and React, I design responsive front-end interfaces. My expertise includes managing databases like Oracle, Db2, Cassandra, and MongoDB. I leverage AWS for scalable cloud deployments and implement CI/CD pipelines using Jenkins and Docker for automated delivery. I thrive in Agile environments, driving continuous improvement and delivering reliable software systems.
+									I am a Senior Full Stack Developer with over 8 years of experience in building scalable, high-performance software solutions using Core Java, NodeJS, ExpressJS, Spring, and Spring Boot. I excel at creating microservices and RESTful APIs while ensuring efficiency and security. Skilled in Angular and React, I design responsive front-end interfaces. My expertise includes managing databases like Oracle, Db2, Cassandra, and MongoDB. I leverage AWS for scalable cloud deployments and implement CI/CD pipelines using Jenkins and Docker for automated delivery. I thrive in Agile environments, driving continuous improvement and delivering reliable software systems.
 									</h3>
 								
 								<div class="row">
