Update Walmart experience dates in index.html

--- a/index.html
+++ b/index.html
@@ -169,13 +169,40 @@
 				<div class="experience-content">
 					<div class="main-timeline">
 						<ul>
+							<!-- Walmart Experience -->
+							<li>
+								<div class="single-timeline-box fix">
+									<div class="row">
+										<div class="col-md-5">
+											<div class="experience-time text-right">
+												<h2>May 2025 – Present</h2>
+												<h3>Senior Full Stack Developer</h3>
+											</div>
+										</div>
+										<div class="col-md-offset-1 col-md-5">
+											<div class="timeline">
+												<div class="timeline-content">
+													<h4 class="title">
+														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
+														Walmart Global Tech
+													</h4>
+													<h5>Bentonville, AR</h5>
+													<!--<p class="description">
+														Developed dynamic user interfaces using ReactJS and Material-UI. Built scalable RESTful APIs with Spring Boot and managed deployments on AWS.
+													</p>-->
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</li>
 							<!-- Enqbator Experience -->
 							<li>
 								<div class="single-timeline-box fix">
 									<div class="row">
 										<div class="col-md-5">
 											<div class="experience-time text-right">
-												<h2>May 2023 – Present</h2>
+												<h2>May 2023 – March 2025</h2>
 												<h3>Senior Full Stack Developer</h3>
 											</div>
 										</div>
