Uncomment KLA Tencor Experience section in index.html

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 								</div>
 							</li>
 		
-							<!-- KLA Tencor Experience -->
+							<!-- KLA Tencor Experience 
 							<li>
 								<div class="single-timeline-box fix">
 									<div class="row">
@@ -328,13 +328,13 @@
 													<h5>Chennai, India</h5>
 													<!--<p class="description">
 														Developed backend APIs, optimized SQL queries, and implemented secure logging frameworks.
-													</p>-->
+													</p>
 												</div>
 											</div>
 										</div>
 									</div>
 								</div>
-							</li>
+							</li> -->
 						</ul>
 					</div>
 				</div>
